Integrated matplot++ into cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 set(EXECUTABLE_OUTPUT_PATH bin)
 
+add_subdirectory(matplotplusplus)
+set(OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/plots/)
+
 file(GLOB SOURCE cpp/src/*.cpp cpp/main/main.cpp)
 include_directories(cpp/include)
 
 add_executable(main ${SOURCE})
+target_link_libraries(main PUBLIC matplot)
+target_compile_definitions(main PRIVATE OUTPUT_DIRECTORY="${OUTPUT_DIRECTORY}")
