Added function plots

--- a/Exc2/CMakeLists.txt
+++ b/Exc2/CMakeLists.txt
@@ -10,7 +10,7 @@ set(OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/plots/)
 target_compile_definitions(main PRIVATE OUTPUT_DIRECTORY="${OUTPUT_DIRECTORY}")
 
 target_compile_options(main PRIVATE "-w")
-
+set_property(TARGET main PROPERTY CXX_STANDARD 23)
 
 # Matplot++
 add_subdirectory(/home/nel/Uni/Statistics2024/matplotplusplus ${CMAKE_BINARY_DIR}/matplotplusplus)
