--- a/Exc4/CMakeLists.txt
+++ b/Exc4/CMakeLists.txt
@@ -1,2 +1,9 @@
-set(EXECUTABLE_OUTPUT_PATH bin/)
-add_executable(main main/main.cpp)
+file(GLOB SOURCE cpp/src/*.cpp cpp/main/main.cpp)
+include_directories(cpp/include)
+
+add_executable(exc4 ${SOURCE})
+
+set(OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/plots/)
+target_compile_definitions(exc4 PRIVATE OUTPUT_DIRECTORY="${OUTPUT_DIRECTORY}")
+
+# target_link_libraries(exc1 PRIVATE matplot)
