--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,2 +1,16 @@
 image: registry.gitlab.com/nskowron/testdocker
 include: Exc4/.gitlab-ci.yml
+
+stages:
+  - build
+
+build:
+  stage: build
+  script:
+    - mkdir build
+    - cd build
+    - cmake ..
+    - make
+  artifacts:
+    paths:
+      - build/bin
