--- a/Exc3/Exc2/CMakeLists.txt
+++ b/Exc3/Exc2/CMakeLists.txt
@@ -1,9 +1,9 @@
 file(GLOB SOURCE cpp/src/*.cpp cpp/main/main.cpp)
 include_directories(cpp/include)
 
-add_executable(exc2 ${SOURCE})
+add_executable(exc3-2 ${SOURCE})
 
 set(OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/plots/)
-target_compile_definitions(exc2 PRIVATE OUTPUT_DIRECTORY="${OUTPUT_DIRECTORY}")
+target_compile_definitions(exc3-2 PRIVATE OUTPUT_DIRECTORY="${OUTPUT_DIRECTORY}")
 
-target_link_libraries(exc2 PRIVATE matplot)
+target_link_libraries(exc3-2 PRIVATE matplot)
