--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,4 @@ FetchContent_MakeAvailable(matplot)
 add_subdirectory(Exc1)
 add_subdirectory(Exc2)
 add_subdirectory(Exc3)
+add_subdirectory(Exc4)
