smoke test ci for exc4

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,9 @@
 image: registry.gitlab.com/nskowron/testdocker
-# include: Exc4/.gitlab-ci.yml
+include: Exc4/.gitlab-ci.yml
 
 stages:
   - build
+  - test
 
 build:
   stage: build
