--- a/Exc4/CMakeLists.txt
+++ b/Exc4/CMakeLists.txt
@@ -1,7 +1,3 @@
-file(GLOB SOURCE cpp/src/*.cpp cpp/main/main.cpp)
-include_directories(cpp/include)
-
-add_executable(exc4 ${SOURCE})
-
-set(OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/plots/)
-target_compile_definitions(exc4 PRIVATE OUTPUT_DIRECTORY="${OUTPUT_DIRECTORY}")
+add_subdirectory(Exc1)
+# add_subdirectory(Exc2)
+# add_subdirectory(Exc3)
